Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.14.0
-
-
814682bb9a5c9ccaff30662dd757cd827f39aad0 (qt/qtquickcontrols2/5.15)
Description
QQmlApplicationEngine::retranslate does not work for display text in ComboBox.
How to reproduce:
1. Run the sample code (QTBUG8202_sample.zip)
2. Press "j" to translate to Japanese, Press "e" to translate to English.
The elements of ComboBox are translated but not the display text.
Workaround?
Adding the following to ComboBox solves the problem
displayText: qsTr(currentText)
or
displayText: listViewModel.get(currentIndex).label
Attachments
Issue Links
- relates to
-
QTBUG-68350 QQmlApplicationEngine::retranslate do not work for strings in ListView/ListElement
-
- Closed
-