Update the current text after a translator is installed

This ensures that if the model is updated due to a retranslate
that it gets the updated string and the ComboBox shows it
correctly.

Change-Id: Iecbc18a1051d6db13035b3efa393d9bf97788dd9
Fixes: QTBUG-82020
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>