tests/auto/auto.pro
@@ -30,7 +30,5 @@ SUBDIRS += \
     qquickuniversalstyleconf \
     revisions \
     sanity \
-    snippets
-
-# Requires lrelease, which isn't always available in CI.
-qtHaveModule(tools): translation
+    snippets \
+    translation
